[gd_scene load_steps=3 format=3 uid="uid://cje7pc3mhl05q"]

[ext_resource type="Script" uid="uid://bv0pmdeycts4y" path="res://data/modules/camera/tactics_camera.gd" id="1_m3apn"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uve3n"]

[node name="TacticsCamera" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_m3apn")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
fov = 30.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
shape = SubResource("BoxShape3D_uve3n")
